Cool/Parsing/CoolGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\Me\Cybernetic\ComputerScience\4Year\1er semestre\COMP\Compiler\Cool - Ivan\Code\CoolCompiler\Cool\Parsing\CoolGrammar.g4 by ANTLR 4.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6")]
[System.CLSCompliant(false)]
public partial class CoolGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		WHITESPACE=18, BLOCK_COMMENT=19, LINE_COMMENT=20, CLASS=21, ELSE=22, FALSE=23, 
		FI=24, IF=25, IN=26, INHERITS=27, ISVOID=28, LET=29, LOOP=30, POOL=31, 
		THEN=32, WHILE=33, CASE=34, ESAC=35, NEW=36, OF=37, NOT=38, TRUE=39, STRING=40, 
		INT=41, TYPE=42, ID=43, ASSIGNMENT=44, IMPLY=45;
	public const int
		RULE_program = 0, RULE_programBlock = 1, RULE_classDefine = 2, RULE_feature = 3, 
		RULE_formal = 4, RULE_expression = 5;
	public static readonly string[] ruleNames = {
		"program", "programBlock", "classDefine", "feature", "formal", "expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'{'", "'}'", "'('", "','", "')'", "':'", "'@'", "'.'", "'~'", 
		"'*'", "'/'", "'+'", "'-'", "'<='", "'<'", "'='", null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'<-'", "'=>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "WHITESPACE", "BLOCK_COMMENT", "LINE_COMMENT", 
		"CLASS", "ELSE", "FALSE", "FI", "IF", "IN", "INHERITS", "ISVOID", "LET", 
		"LOOP", "POOL", "THEN", "WHILE", "CASE", "ESAC", "NEW", "OF", "NOT", "TRUE", 
		"STRING", "INT", "TYPE", "ID", "ASSIGNMENT", "IMPLY"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CoolGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	static CoolGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

	public CoolGrammarParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ProgramBlockContext programBlock() {
			return GetRuleContext<ProgramBlockContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 12; programBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgramBlockContext : ParserRuleContext {
		public ProgramBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programBlock; } }
	 
		public ProgramBlockContext() { }
		public virtual void CopyFrom(ProgramBlockContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ClassesContext : ProgramBlockContext {
		public ClassDefineContext classDefine() {
			return GetRuleContext<ClassDefineContext>(0);
		}
		public ProgramBlockContext programBlock() {
			return GetRuleContext<ProgramBlockContext>(0);
		}
		public ClassesContext(ProgramBlockContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClasses(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EofContext : ProgramBlockContext {
		public ITerminalNode Eof() { return GetToken(CoolGrammarParser.Eof, 0); }
		public EofContext(ProgramBlockContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEof(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramBlockContext programBlock() {
		ProgramBlockContext _localctx = new ProgramBlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_programBlock);
		try {
			State = 19;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CLASS:
				_localctx = new ClassesContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 14; classDefine();
				State = 15; Match(T__0);
				State = 16; programBlock();
				}
				break;
			case Eof:
				_localctx = new EofContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 18; Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefineContext : ParserRuleContext {
		public ITerminalNode CLASS() { return GetToken(CoolGrammarParser.CLASS, 0); }
		public ITerminalNode[] TYPE() { return GetTokens(CoolGrammarParser.TYPE); }
		public ITerminalNode TYPE(int i) {
			return GetToken(CoolGrammarParser.TYPE, i);
		}
		public ITerminalNode INHERITS() { return GetToken(CoolGrammarParser.INHERITS, 0); }
		public FeatureContext[] feature() {
			return GetRuleContexts<FeatureContext>();
		}
		public FeatureContext feature(int i) {
			return GetRuleContext<FeatureContext>(i);
		}
		public ClassDefineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDefine; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDefine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefineContext classDefine() {
		ClassDefineContext _localctx = new ClassDefineContext(Context, State);
		EnterRule(_localctx, 4, RULE_classDefine);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 21; Match(CLASS);
			State = 22; Match(TYPE);
			State = 25;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INHERITS) {
				{
				State = 23; Match(INHERITS);
				State = 24; Match(TYPE);
				}
			}

			State = 27; Match(T__1);
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 28; feature();
				State = 29; Match(T__0);
				}
				}
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 36; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FeatureContext : ParserRuleContext {
		public FeatureContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_feature; } }
	 
		public FeatureContext() { }
		public virtual void CopyFrom(FeatureContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PropertyContext : FeatureContext {
		public ITerminalNode ID() { return GetToken(CoolGrammarParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(CoolGrammarParser.TYPE, 0); }
		public ITerminalNode ASSIGNMENT() { return GetToken(CoolGrammarParser.ASSIGNMENT, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public PropertyContext(FeatureContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProperty(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MethodContext : FeatureContext {
		public ITerminalNode ID() { return GetToken(CoolGrammarParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(CoolGrammarParser.TYPE, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public FormalContext[] formal() {
			return GetRuleContexts<FormalContext>();
		}
		public FormalContext formal(int i) {
			return GetRuleContext<FormalContext>(i);
		}
		public MethodContext(FeatureContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethod(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FeatureContext feature() {
		FeatureContext _localctx = new FeatureContext(Context, State);
		EnterRule(_localctx, 6, RULE_feature);
		int _la;
		try {
			State = 67;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				_localctx = new MethodContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 38; Match(ID);
				State = 39; Match(T__3);
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==ID) {
					{
					{
					State = 40; formal();
					State = 45;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==T__4) {
						{
						{
						State = 41; Match(T__4);
						State = 42; formal();
						}
						}
						State = 47;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
					}
					State = 52;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 53; Match(T__5);
				State = 54; Match(T__6);
				State = 55; Match(TYPE);
				State = 56; Match(T__1);
				State = 57; expression(0);
				State = 58; Match(T__2);
				}
				break;
			case 2:
				_localctx = new PropertyContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 60; Match(ID);
				State = 61; Match(T__6);
				State = 62; Match(TYPE);
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ASSIGNMENT) {
					{
					State = 63; Match(ASSIGNMENT);
					State = 64; expression(0);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormalContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(CoolGrammarParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(CoolGrammarParser.TYPE, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formal; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormal(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormalContext formal() {
		FormalContext _localctx = new FormalContext(Context, State);
		EnterRule(_localctx, 8, RULE_formal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; Match(ID);
			State = 70; Match(T__6);
			State = 71; Match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParenthesesContext : ExpressionContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ParenthesesContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParentheses(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MethodCallContext : ExpressionContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode ID() { return GetToken(CoolGrammarParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(CoolGrammarParser.TYPE, 0); }
		public MethodCallContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodCall(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ComparissonContext : ExpressionContext {
		public IToken op;
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ComparissonContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparisson(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntContext : ExpressionContext {
		public ITerminalNode INT() { return GetToken(CoolGrammarParser.INT, 0); }
		public IntContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OwnMethodCallContext : ExpressionContext {
		public ITerminalNode ID() { return GetToken(CoolGrammarParser.ID, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public OwnMethodCallContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOwnMethodCall(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IsvoidContext : ExpressionContext {
		public ITerminalNode ISVOID() { return GetToken(CoolGrammarParser.ISVOID, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public IsvoidContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIsvoid(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TrueContext : ExpressionContext {
		public ITerminalNode TRUE() { return GetToken(CoolGrammarParser.TRUE, 0); }
		public TrueContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTrue(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BlockContext : ExpressionContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public BlockContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class WhileContext : ExpressionContext {
		public ITerminalNode WHILE() { return GetToken(CoolGrammarParser.WHILE, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode LOOP() { return GetToken(CoolGrammarParser.LOOP, 0); }
		public ITerminalNode POOL() { return GetToken(CoolGrammarParser.POOL, 0); }
		public WhileContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhile(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IdContext : ExpressionContext {
		public ITerminalNode ID() { return GetToken(CoolGrammarParser.ID, 0); }
		public IdContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitId(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BoolNotContext : ExpressionContext {
		public ITerminalNode NOT() { return GetToken(CoolGrammarParser.NOT, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BoolNotContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolNot(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NewContext : ExpressionContext {
		public ITerminalNode NEW() { return GetToken(CoolGrammarParser.NEW, 0); }
		public ITerminalNode TYPE() { return GetToken(CoolGrammarParser.TYPE, 0); }
		public NewContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNew(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ArithmeticContext : ExpressionContext {
		public IToken op;
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ArithmeticContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArithmetic(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignmentContext : ExpressionContext {
		public ITerminalNode ID() { return GetToken(CoolGrammarParser.ID, 0); }
		public ITerminalNode ASSIGNMENT() { return GetToken(CoolGrammarParser.ASSIGNMENT, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignmentContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LetInContext : ExpressionContext {
		public ITerminalNode LET() { return GetToken(CoolGrammarParser.LET, 0); }
		public ITerminalNode[] ID() { return GetTokens(CoolGrammarParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(CoolGrammarParser.ID, i);
		}
		public ITerminalNode[] TYPE() { return GetTokens(CoolGrammarParser.TYPE); }
		public ITerminalNode TYPE(int i) {
			return GetToken(CoolGrammarParser.TYPE, i);
		}
		public ITerminalNode IN() { return GetToken(CoolGrammarParser.IN, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode[] ASSIGNMENT() { return GetTokens(CoolGrammarParser.ASSIGNMENT); }
		public ITerminalNode ASSIGNMENT(int i) {
			return GetToken(CoolGrammarParser.ASSIGNMENT, i);
		}
		public LetInContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLetIn(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IfContext : ExpressionContext {
		public ITerminalNode IF() { return GetToken(CoolGrammarParser.IF, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode THEN() { return GetToken(CoolGrammarParser.THEN, 0); }
		public ITerminalNode ELSE() { return GetToken(CoolGrammarParser.ELSE, 0); }
		public ITerminalNode FI() { return GetToken(CoolGrammarParser.FI, 0); }
		public IfContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringContext : ExpressionContext {
		public ITerminalNode STRING() { return GetToken(CoolGrammarParser.STRING, 0); }
		public StringContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitString(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FalseContext : ExpressionContext {
		public ITerminalNode FALSE() { return GetToken(CoolGrammarParser.FALSE, 0); }
		public FalseContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFalse(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NegativeContext : ExpressionContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public NegativeContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNegative(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CaseContext : ExpressionContext {
		public ITerminalNode CASE() { return GetToken(CoolGrammarParser.CASE, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode OF() { return GetToken(CoolGrammarParser.OF, 0); }
		public ITerminalNode ESAC() { return GetToken(CoolGrammarParser.ESAC, 0); }
		public ITerminalNode[] ID() { return GetTokens(CoolGrammarParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(CoolGrammarParser.ID, i);
		}
		public ITerminalNode[] TYPE() { return GetTokens(CoolGrammarParser.TYPE); }
		public ITerminalNode TYPE(int i) {
			return GetToken(CoolGrammarParser.TYPE, i);
		}
		public ITerminalNode[] IMPLY() { return GetTokens(CoolGrammarParser.IMPLY); }
		public ITerminalNode IMPLY(int i) {
			return GetToken(CoolGrammarParser.IMPLY, i);
		}
		public CaseContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoolGrammarVisitor<TResult> typedVisitor = visitor as ICoolGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}
